conformance/tests/tlsroute-invalid-no-matching-listener.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-tls-passthrough-only
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls-passthrough
      protocol: TLS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-http-only
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-https-only
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-validity-checks-certificate
            namespace: gateway-conformance-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-not-allowed-protocol-http
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tlsroute-http-only
  hostnames:
    - tls.example.com
  rules:
    - backendRefs:
        - name: tls-backend
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-not-allowed-protocol-https
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tlsroute-https-only
  hostnames:
    - tls.example.com
  rules:
    - backendRefs:
        - name: tls-backend
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-no-matching-section-name
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-tlsroute-tls-passthrough-only
      sectionName: nonexistent-listener
  hostnames:
    - tls.example.com
  rules:
    - backendRefs:
        - name: tls-backend
          port: 443
